<resources>

    <!--region Application-->
    <string name="app_name">MyBills</string>
    <string name="goole_maps_key">AIzaSyCczk1b8_C7NOm-ZXkj76y6fjBixUTV5qI</string>
    <string name="frg_signin_login_accoint">Login Your Account</string>
    <string name="frg_signin_username">User Name</string>
    <string name="frg_signin_password">Password</string>
    <string name="frg_signin_create_account">Create Account</string>
    <string name="frg_signup_accoint_create">Create an Account</string>
    <string name="frg_signup_yourname">Your Name</string>
    <string name="frg_signup_password">Password</string>
    <string name="frg_signup_email">Email Address</string>
    <string name="frg_signin_login">Login</string>
    <string name="frg_signup_Register">Register</string>
    <string name="frg_Biller_BillerSetting">Biller Setting</string>
    <string name="frg_signup_create_account">Create Account</string>
    <string name="frg_forgot_password_login_accoint">Forgot Password</string>
    <string name="frg_forgot_password_username">Username / Email</string>
    <string name="frg_forgot_password_reset">Reset Password</string>
    <string name="frg_forgot_password_login">Login</string>
    <string name="frg_signup_confirm_cpassword">Confirm Password</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="calendar">Calender</string>
    <string name="frg_edit_profile">Edit Profile</string>
    <string name="frg_edit_profile_yourname">Edit your name</string>
    <string name="frg_edit_profile_yourEmail">Edit your email</string>
    <string name="frg_edit_profile_yourGender">Edit your gender</string>
    <string name="frg_edit_profile_cnic">Edit your CNIC</string>
    <string name="frg_edit_profile_province">Edit your province</string>
    <string name="frg_edit_profile_edit_city">Edit your City</string>
    <string name="frg_edit_profile_update">Update</string>
    <string name="frg_edit_profile_phone">Edit your phone number</string>
    <string name="frg_my_bills_enter_reference">Enter reference number</string>
    <string name="frg_my_bills_account_number">Enter acount number</string>
    <string name="frg_my_bills_add_update">Add/Update</string>
    <string name="frg_my_bills">My Bills</string>
    <string name="select_bill_type">Bill Type</string>
    <string name="select_biller_type">Select Biller</string>
    <string name="verification_code_send">OTP Sent on your Mobile Number</string>
    <string name="verification_code_send_2"> Please enter the verification OTP below</string>
    <string name="enter_otp_that_send">\"Enter Pin Code that has been sent to your PHONE NUMBER\"</string>
    <string name="technical_fault_otp">Due to some technical problem, you are not recieving the code via sms, therefore please use verification code:</string>
    <string name="frg_history">History</string>
    <string name="frg_important_dates">Important Dates</string>
    <string name="frg_settings">Settings</string>
    <string name="frag_calender_todays_slot">Today</string>
    <string name="frag_calender_important_dates">Important dates</string>
    <string name="frg_MaintenanceSchedule">Maintenance Schedule</string>
    <string name="OutageScheduleFragment">Outage Schedule</string>
    <string name="AlertsFragment">Alerts</string>
    <string name="TermsConditionsFragment"><![CDATA[Terms & Conditions]]></string>
    <string name="BillAnaylsisFragment">Bill Anaylsis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
