<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_1"
    android:clickable="true">


    <RelativeLayout
        android:id="@+id/frg_forgot_password_rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_left_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/frg_forgot_password_llIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frg_forgot_password_rlToolbar"
        android:layout_marginTop="15dp"
        android:gravity="center"

        android:orientation="horizontal">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/frg_forgot_password_login_accoint"
            android:textColor="@color/black_1"
            android:textSize="@dimen/fontsize_large"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frg_forgot_password_llIntro"
        android:layout_marginTop="60dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">


            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_forgot_password_edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_forgot_password_username"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/frg_forgot_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:text="@string/frg_forgot_password_reset"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <RelativeLayout
                    android:id="@+id/frg_forgot_password_rlLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/frg_forgot_password_login"
                        android:textColor="@color/black_1"
                        android:textSize="@dimen/fontsize_tiny" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frg_forgot_password_rlCreate"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edttext_height_xmedium"
                    android:layout_gravity="center"
                    android:layout_weight="50">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/black_1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:text="@string/frg_signin_create_account"
                        android:textColor="@color/black_1"
                        android:textSize="@dimen/fontsize_tiny" />

                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
