<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_1"
    android:clickable="true">



    <LinearLayout
        android:id="@+id/frg_edit_profile_llIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/thm_yellow"
        android:gravity="start"
        android:orientation="vertical">


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.ast.MyBills.Utils.CircleImageView
                android:id="@+id/lay_navigationview_imv_user"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:elevation="2dp"
                android:padding="2dp"
                android:src="@drawable/icprofile" />
        </RelativeLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/lay_nav_txv_name"
                android:background="@null"
                android:cursorVisible="true"
                android:lines="1"
                android:textCursorDrawable="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingEnd="10dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize_medium"
                android:textStyle="bold" />

            <EditText
                android:background="@null"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:id="@+id/lay_nav_txv_iqamaID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  android:lines="2"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingEnd="10dp"
                android:text="Address \nId 213123"
                android:textAlignment="center"
                android:textColor="@color/black_1"
                android:textSize="@dimen/fontsize_mini" />
        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frg_edit_profile_llIntro"
        android:layout_marginTop="60dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_edit_profile_edt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_edit_profile_yourname"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:text="Hasnain"
                    android:inputType="textPersonName"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_edit_profile_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_edit_profile_yourEmail"
                    android:padding="10dp"
                    android:text="Hasnainr128@gmail.com"
                    android:paddingStart="10dp"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText

                    android:id="@+id/frg_edit_profile_edt_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_edit_profile_yourGender"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"

                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_edit_profile_edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_edit_profile_phone"
                    android:padding="10dp"
                    android:text="03055913702"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_edit_profile_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_edit_profile_cnic"
                    android:padding="10dp"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_edit_profile_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_edit_profile_province"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>


            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText

                    android:id="@+id/frg_edit_profile_edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_edit_profile_edit_city"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/frg_editprofile_rlnext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
