<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_1"
    android:clickable="true">


    <RelativeLayout
        android:id="@+id/frg_signup_rlToolbar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_left_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/frg_signup_llIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frg_signup_rlToolbar"
        android:layout_marginTop="15dp"
        android:gravity="center"

        android:orientation="horizontal">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/frg_signup_accoint_create"
            android:textColor="@color/black_1"
            android:textSize="@dimen/fontsize_large"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frg_signup_llIntro"
        android:layout_marginTop="60dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">


            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_signup_edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_signup_yourname"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_signup_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_signup_email"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_signup_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_signup_password"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/etOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="Enter Phone Number"
                    android:padding="10dp"
                    android:text="92"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/verifyno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="false"
                    android:padding="8dp"
                    android:text="Verify"
                   android:background="@drawable/shp_rect_rounded_yellow_mini"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>


            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edttext_height_medium"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini_stoke">

                <EditText
                    android:id="@+id/frg_signup_edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/frg_signup_confirm_cpassword"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/light_gray3"
                    android:textColorHint="@color/light_gray3"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frg_presigin_rlnext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shp_rect_rounded_yellow_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:text="Next"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/fontsize_mini" />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
